@@ -6,6 +6,8 @@
     * Add fields to the CloudI Service API code_status function
       (runtime_start, runtime_clock, runtime_clock_offset)
     * Update the cloudi_service_api:code_status type specification
+    * Add cloudi_timestamp:seconds_to_string/2 and
+      cloudi_timestamp:nanoseconds_to_string/2
 
 2018-08-11 Michael Truog   <mjtruog at protonmail dot com>
 
